Fix z-index

--- a/webui/react/src/components/Page.module.scss
+++ b/webui/react/src/components/Page.module.scss
@@ -28,7 +28,6 @@
 
     .body {
       overflow: auto;
-      padding-bottom: 0;
     }
   }
   &.noScroll {
