--- a/webui/react/src/components/PageHeader/PageHeader.module.scss
+++ b/webui/react/src/components/PageHeader/PageHeader.module.scss
@@ -30,5 +30,5 @@
   padding: 16px;
   position: sticky;
   top: 0;
-  z-index: 10000;
+  z-index: 20;
 }
